# okk

./: .gitignore  Makefile  README.md  index.yaml
.claude/skills/deploy/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: docker_publish.yaml  helm-release.yaml
agent/deploy/: agent-dryrun.yaml  deployment.yaml  kind-values.yaml
agent/src/okk_agent/: agent.py  main.py  prompt.py
charts/okk/: values.yaml
charts/okk-manager/: Chart.yaml  values.yaml
charts/okk-manager/crds/: core.oxia.io_oxiaclusters.yaml  core.oxia.io_tcbasickvs.yaml  core.oxia.io_tcmetadataephemerals.yaml  core.oxia.io_tcmetadatanotifications.yaml  core.oxia.io_tcstreamingsequences.yaml  core.oxia.io_testcases.yaml
charts/okk-manager/templates/: _helpers.tpl  (+1 more)
charts/okk-stack/: Chart.yaml  values.yaml
coordinator/: go.mod  go.sum
coordinator/cmd/: main.go
coordinator/proto/: okk.proto
docs/design/: okk-pilot.md
examples/: oxia-cluster.yaml  tc_jvm_basic_kv.yaml  tc_jvm_metadata_ephemeral.yaml  tc_jvm_metadata_notification.yaml  tc_jvm_streaming_sequence.yaml
manager/: Makefile  PROJECT  README.md  go.mod  go.sum
manager/cmd/: main.go
pilot/: Dockerfile  pipeline.yaml  pyproject.toml
pilot/src/okk_pilot/: config.py  main.py  pilot.py  pipeline.py
pilot/src/okk_pilot/events/: cron.py  github_poller.py  k8s.py  webhook.py
pilot/src/okk_pilot/tools/: act.py  invariants.py  observe.py  report.py  state.py
proto/: okk.proto
worker/golang/: go.mod  go.sum
worker/jvm/: Dockerfile  build.gradle  settings.gradle
(+130 files in other folders)
